# prp-api/api/swagger/swagger.yaml
@@ -50,7 +50,40 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse" 
-    
+
+  /survey/{id}:
+    x-swagger-router-controller: get-survey
+    get:
+      description: "get survey instance of patient"
+      operationId: getSurveys
+      parameters:
+        - name: id
+          in: path
+          description: "Survey instance ID"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/GetSurveyResponse"
+        "404":
+          description: Improper Client Request
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: Server Error
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ErrorResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+			
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
